python/ql/test/extractor-tests/syntax_error/illegal_if.py






a if cond else b = 1

